--- a/NLP2/Lab02/TP2.ipynb
+++ b/NLP2/Lab02/TP2.ipynb
@@ -51,8 +51,18 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "# Lab02 Encoder-decoder model\n",
         "\n",
-        "# Language Translation with ``nn.Transformer`` and torchtext\n",
+        "To start off we will do the rewriting of the tutorial of pyTorch language translation with nn.Transformer and torchtext."
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "\n",
+        "## Language Translation with ``nn.Transformer`` and torchtext\n",
         "\n",
         "This tutorial shows:\n",
         "    - How to train a translation model from scratch using Transformer.\n",
@@ -107,8 +117,7 @@
         "Create source and target language tokenizer. Make sure to install the dependencies.\n",
         "\n",
         "```python\n",
-        "pip install -U torchdata\n",
-        "pip install -U spacy\n",
+        "pip install spacy sacrebleu torchdata -U\n",
         "python -m spacy download en_core_web_sm\n",
         "python -m spacy download de_core_news_sm\n",
         "```\n"
@@ -637,7 +646,9 @@
       "source": [
         "## Theoretical questions\n",
         "\n",
-        "### In the positional encoding, why are we using a combination of sinus and cosinus?\n",
+        "Now that the tutorial is complete and that we have our greedy translator let's answer the following questions :\n",
+        "\n",
+        "### (1) In the positional encoding, why are we using a combination of sinus and cosinus?\n",
         "First of all, positional encodings are used to provide the model with information about the relative positions of tokens in the input sequence because Transformer does not have notion of word order or position. With it the Transformer model can capture the sequential relationships between tokens and leverage this information during the self-attention mechanism.\n",
         "\n",
         "But, encoding using only one type of function (sine or cosine) would result in a biased encoding pattern.\n",
@@ -646,7 +657,7 @@
         "\n",
         "The high-frequency components emanating from these functions capture small details while the low-frequency components capture larger positional relationships. So, with both functions we create a rich representation of token positions in the input sequence, enabling the transformer model to effectively use positional information during the translation process.\n",
         "\n",
-        "### In the Seq2SeqTransformer class, what is the parameter nhead for?\n",
+        "### (2) In the Seq2SeqTransformer class, what is the parameter nhead for?\n",
         "\n",
         "The parameter nhead stands for the number of attention heads in the Transformer model.\n",
         "\n",
@@ -656,7 +667,7 @@
         "\n",
         "As nhead gets bigger it allows for more complex interactions between tokens. But, it comes at a great cost of computational efficiency. We then have to find a balance between these two concepts.\n",
         "\n",
-        "### In the Seq2SeqTransformer class, what is the point of the generator ?\n",
+        "### (3) In the Seq2SeqTransformer class, what is the point of the generator ?\n",
         "\n",
         "The generator is used as the final layer of the model. It is responsible for generating the output predictions based on the transformed inputs.\n",
         "\n",
@@ -666,7 +677,7 @@
         "\n",
         "It can be then passed through a softmax function to obtain a probability distribution over the target vocabulary, allowing for the selection of the most likely next word !\n",
         "\n",
-        "### Describe the goal of the create_mask function. Why does it handle differently the source and target masks?\n",
+        "### (4) Describe the goal of the create_mask function. Why does it handle differently the source and target masks?\n",
         "\n",
         "The goal of the `create_mask` function is to generate masks that are used in the attention mechanism of the Transformer model.\n",
         "By handling the source and target masks differently, it ensures that the attention mechanism in the Transformer model is used correctly for both the source and target sequences.\n",
@@ -681,7 +692,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## other decoding functions"
+        "## Decoding functions"
       ]
     },
     {
@@ -689,7 +700,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "using a top-k sampling with temperature."
+        "Let's make another program such as the greedy translator but using a <u>top-k sampling with temperature :</u>"
       ]
     },
     {
@@ -775,7 +786,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "using a top-p sampling with temperature."
+        "And using a <u>top-p sampling with temperature :</u>"
       ]
     },
     {
@@ -875,7 +886,56 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Analysis of the parameters"
+        "Ok now that we have 3 different translators let's compare them qualitatively as we play with the k and p temperature parameters :"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "k=[1,2,5,10,20,50,100]\n",
+        "p=[0.1,0.5,0.75,2]\n",
+        "temperature=[1.0, 5.0, 10.0]"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Greedy translation\n",
+        "print(greedy_translate(transformer, \"Eine Gruppe von Menschen steht vor einem Iglu .\"))\n",
+        "print(greedy_translate(transformer, \"Ein Mann in einem blauen Hemd steht auf einer Leiter und putzt ein Fenster .\"))\n",
+        "print(greedy_translate(transformer, \"Ein junges Mädchen in einem Karateanzug bricht einen Stock mit einem Tritt .\"))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Top-k translation\n",
+        "for i in k:\n",
+        "    print(\"k=\",i,\":\",topk_translate(transformer, \"Eine Gruppe von Menschen steht vor einem Iglu .\", k=i))\n",
+        "    print(\"k=\",i,\":\",topk_translate(transformer, \"Ein Mann in einem blauen Hemd steht auf einer Leiter und putzt ein Fenster .\", k=i))\n",
+        "    print(\"k=\",i,\":\",topk_translate(transformer, \"Ein junges Mädchen in einem Karateanzug bricht einen Stock mit einem Tritt .\", k=i))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Top-p (nucleus) translation\n",
+        "for i in p:\n",
+        "    print(\"p=\",i,\":\",topp_translate(transformer, \"Eine Gruppe von Menschen steht vor einem Iglu .\", p=i))\n",
+        "    print(\"p=\",i,\":\",topp_translate(transformer, \"Ein Mann in einem blauen Hemd steht auf einer Leiter und putzt ein Fenster .\", p=i))\n",
+        "    print(\"p=\",i,\":\",topp_translate(transformer, \"Ein junges Mädchen in einem Karateanzug bricht einen Stock mit einem Tritt .\", p=i))"
       ]
     }
   ],
