--- a/NLP2/Lab02/TP2.ipynb
+++ b/NLP2/Lab02/TP2.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 20,
       "metadata": {
         "collapsed": false
       },
@@ -31,7 +31,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 21,
       "metadata": {},
       "outputs": [
         {
@@ -90,7 +90,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 22,
       "metadata": {
         "collapsed": false
       },
@@ -125,24 +125,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 23,
       "metadata": {
         "collapsed": false
       },
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "2023-05-27 16:29:59.007486: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-            "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-            "2023-05-27 16:29:59.511388: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n",
-            "2023-05-27 16:30:00.032014: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:996] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
-            "2023-05-27 16:30:00.033004: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:996] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
-            "2023-05-27 16:30:00.033119: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:996] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "token_transform[SRC_LANGUAGE] = get_tokenizer('spacy', language='de_core_news_sm')\n",
         "token_transform[TGT_LANGUAGE] = get_tokenizer('spacy', language='en_core_web_sm')\n",
@@ -198,7 +185,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 24,
       "metadata": {
         "collapsed": false
       },
@@ -296,7 +283,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 25,
       "metadata": {
         "collapsed": false
       },
@@ -333,7 +320,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 26,
       "metadata": {
         "collapsed": false
       },
@@ -381,7 +368,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 27,
       "metadata": {
         "collapsed": false
       },
@@ -434,7 +421,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 28,
       "metadata": {
         "collapsed": false
       },
@@ -504,7 +491,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 29,
       "metadata": {
         "collapsed": false
       },
@@ -523,24 +510,24 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Epoch: 1, Train loss: 5.343, Val loss: 4.109, Epoch time = 40.022s\n",
-            "Epoch: 2, Train loss: 3.762, Val loss: 3.312, Epoch time = 39.334s\n",
-            "Epoch: 3, Train loss: 3.161, Val loss: 2.891, Epoch time = 39.121s\n",
-            "Epoch: 4, Train loss: 2.768, Val loss: 2.635, Epoch time = 39.160s\n",
-            "Epoch: 5, Train loss: 2.480, Val loss: 2.450, Epoch time = 39.465s\n",
-            "Epoch: 6, Train loss: 2.249, Val loss: 2.313, Epoch time = 40.064s\n",
-            "Epoch: 7, Train loss: 2.056, Val loss: 2.196, Epoch time = 39.999s\n",
-            "Epoch: 8, Train loss: 1.893, Val loss: 2.106, Epoch time = 40.331s\n",
-            "Epoch: 9, Train loss: 1.757, Val loss: 2.044, Epoch time = 39.277s\n",
-            "Epoch: 10, Train loss: 1.630, Val loss: 1.998, Epoch time = 40.116s\n",
-            "Epoch: 11, Train loss: 1.520, Val loss: 1.963, Epoch time = 40.084s\n",
-            "Epoch: 12, Train loss: 1.418, Val loss: 1.938, Epoch time = 37.390s\n",
-            "Epoch: 13, Train loss: 1.326, Val loss: 1.935, Epoch time = 37.461s\n",
-            "Epoch: 14, Train loss: 1.244, Val loss: 1.934, Epoch time = 38.646s\n",
-            "Epoch: 15, Train loss: 1.173, Val loss: 1.952, Epoch time = 38.262s\n",
-            "Epoch: 16, Train loss: 1.106, Val loss: 1.914, Epoch time = 38.183s\n",
-            "Epoch: 17, Train loss: 1.039, Val loss: 1.919, Epoch time = 38.161s\n",
-            "Epoch: 18, Train loss: 0.978, Val loss: 1.932, Epoch time = 38.920s\n"
+            "Epoch: 1, Train loss: 5.343, Val loss: 4.109, Epoch time = 39.404s\n",
+            "Epoch: 2, Train loss: 3.762, Val loss: 3.312, Epoch time = 37.973s\n",
+            "Epoch: 3, Train loss: 3.161, Val loss: 2.891, Epoch time = 38.304s\n",
+            "Epoch: 4, Train loss: 2.768, Val loss: 2.635, Epoch time = 37.722s\n",
+            "Epoch: 5, Train loss: 2.480, Val loss: 2.450, Epoch time = 37.362s\n",
+            "Epoch: 6, Train loss: 2.249, Val loss: 2.313, Epoch time = 38.036s\n",
+            "Epoch: 7, Train loss: 2.056, Val loss: 2.196, Epoch time = 38.372s\n",
+            "Epoch: 8, Train loss: 1.893, Val loss: 2.106, Epoch time = 39.752s\n",
+            "Epoch: 9, Train loss: 1.757, Val loss: 2.044, Epoch time = 38.533s\n",
+            "Epoch: 10, Train loss: 1.630, Val loss: 1.998, Epoch time = 38.503s\n",
+            "Epoch: 11, Train loss: 1.520, Val loss: 1.963, Epoch time = 38.733s\n",
+            "Epoch: 12, Train loss: 1.418, Val loss: 1.938, Epoch time = 38.531s\n",
+            "Epoch: 13, Train loss: 1.326, Val loss: 1.935, Epoch time = 38.633s\n",
+            "Epoch: 14, Train loss: 1.244, Val loss: 1.934, Epoch time = 39.303s\n",
+            "Epoch: 15, Train loss: 1.173, Val loss: 1.952, Epoch time = 39.166s\n",
+            "Epoch: 16, Train loss: 1.106, Val loss: 1.914, Epoch time = 39.675s\n",
+            "Epoch: 17, Train loss: 1.039, Val loss: 1.919, Epoch time = 38.950s\n",
+            "Epoch: 18, Train loss: 0.978, Val loss: 1.932, Epoch time = 39.669s\n"
           ]
         }
       ],
@@ -557,27 +544,38 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 30,
       "metadata": {},
       "outputs": [],
       "source": [
         "# save the model\n",
-        "torch.save(transformer.state_dict(), 'transformer.pth')"
+        "torch.save(transformer.state_dict(), './transformer.pth')"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 31,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "<All keys matched successfully>"
+            ]
+          },
+          "execution_count": 31,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# load the model\n",
-        "transformer.load_state_dict(torch.load('transformer.pth'))"
+        "transformer.load_state_dict(torch.load('./transformer.pth'))"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 432,
+      "execution_count": 32,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -618,7 +616,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 441,
+      "execution_count": 33,
       "metadata": {
         "collapsed": false
       },
@@ -705,7 +703,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 434,
+      "execution_count": 34,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -762,7 +760,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 442,
+      "execution_count": 46,
       "metadata": {},
       "outputs": [
         {
@@ -771,7 +769,7 @@
           "text": [
             " A group of people stand in front of an igloo . \n",
             " A man in a blue shirt is standing on a ladder cleaning a window . \n",
-            " A young girl in a karate uniform is practicing a stick with a stick in it . \n"
+            " A young girl in a karate uniform is practicing a stick with a stick . \n"
           ]
         }
       ],
@@ -791,7 +789,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 436,
+      "execution_count": 36,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -862,14 +860,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 444,
+      "execution_count": 37,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            " A group of people standing in front of an igloo . \n",
+            " A group of people stand in front of an igloo . \n",
             " A man in a blue shirt is standing on a ladder cleaning a window . \n",
             " A young girl in a karate uniform is practicing a stick with a stick . \n"
           ]
@@ -891,20 +889,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 41,
       "metadata": {},
       "outputs": [],
       "source": [
-        "k=[1,2,5,10,20,50,100]\n",
+        "k=[2,5,10,20,50,100]\n",
         "p=[0.1,0.5,0.75,2]\n",
-        "temperature=[1.0, 5.0, 10.0]"
+        "temperature=[0.1, 0.5, 1]"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 42,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            " A group of people standing in front of an igloo . \n",
+            " A man in a blue shirt is standing on a ladder cleaning a window . \n",
+            " A young girl in a karate uniform is practicing a stick with a stick . \n"
+          ]
+        }
+      ],
       "source": [
         "# Greedy translation\n",
         "print(greedy_translate(transformer, \"Eine Gruppe von Menschen steht vor einem Iglu .\"))\n",
@@ -914,9 +922,34 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 43,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "k= 2 :  A group of people standing in front of an igloo . \n",
+            "k= 2 :  A man in a blue shirt stands on a ladder cleaning a window . \n",
+            "k= 2 :  A young girl in a karate uniform is practicing a stick with a stick in a karate . \n",
+            "k= 5 :  A group of people stand in front of an abandoned machines . \n",
+            "k= 5 :  A man in a blue shirt standing on a ladder cleaning a window . \n",
+            "k= 5 :  A young girl dressed in a karate uniform is practicing with a stick in it . \n",
+            "k= 10 :  A group of people in an ATM facility . \n",
+            "k= 10 :  A man in a blue shirt is standing on a ladder cleaning a window . \n",
+            "k= 10 :  A young girl in a karate uniform is practicing a stick with a stick in it . \n",
+            "k= 20 :  A group of people are standing in front an office . \n",
+            "k= 20 :  The man in a blue shirt is standing on a ladder cleaning a window . \n",
+            "k= 20 :  A young girl in a karate uniform , being sprayed with a stick . \n",
+            "k= 50 :  A group of people stand in front an extravagant store . \n",
+            "k= 50 :  A man in a blue shirt works a ladder cleaning a window . \n",
+            "k= 50 :  A young girl in a karate uniform is making a stick with a pumpkin . \n",
+            "k= 100 :  A group of people stand in front an isle . \n",
+            "k= 100 :  A man in a blue shirt is standing on a ladder cleaning a window . \n",
+            "k= 100 :  A young girl in a karate uniform is welding a stick with a stick . \n"
+          ]
+        }
+      ],
       "source": [
         "# Top-k translation\n",
         "for i in k:\n",
@@ -927,9 +960,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 44,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "p= 0.1 :  Group of people standing in front an What . \n",
+            "p= 0.1 :  A man in a blue shirt stands on a ladder cleaning a window . \n",
+            "p= 0.1 :  engaged in a karate karate outfit is practicing a name with a stick . \n",
+            "p= 0.5 :  A group of people are standing in front of an oar . \n",
+            "p= 0.5 :  A man in a blue shirt is standing up a ladder cleaning a window . \n",
+            "p= 0.5 :  A young girl in a karate uniform uses a stick with a stick in it . \n",
+            "p= 0.75 :  horseback group of people standing in front of an shaves Buddha \n",
+            "p= 0.75 :  A man in a blue shirt is standing on a ladder cleaning a windows . \n",
+            "p= 0.75 :  A young girl in a karate outfit performs with a stick in a match . \n",
+            "p= 2 :  A group of people standing in front of an auditorium . \n",
+            "p= 2 :  A man in a blue shirt is standing on a ladder cleaning a window . \n",
+            "p= 2 :  A young girl is kicking a stick in a karate fork . \n"
+          ]
+        }
+      ],
       "source": [
         "# Top-p (nucleus) translation\n",
         "for i in p:\n",
