finished (no bonus)

--- a/NLP2/Lab03/TP3.ipynb
+++ b/NLP2/Lab03/TP3.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -69,13 +69,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "import transformers\n",
     "from datasets import load_dataset\n",
     "import numpy as np\n",
+    "\n",
+    "from IPython.display import Markdown, display\n",
     "\n",
     "BATCH_SIZE = 10\n",
     "\n",
@@ -84,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +114,7 @@
      "output_type": "stream",
      "text": [
       "Found cached dataset imdb (/home/pili/.cache/huggingface/datasets/imdb/plain_text/1.0.0/d613c88cf8fa3bab83b4ded3713f1f74830d1100e171db75bbddb80b3345c9c0)\n",
-      "100%|██████████| 3/3 [00:00<00:00, 950.51it/s]\n",
+      "100%|██████████| 3/3 [00:00<00:00, 1003.02it/s]\n",
       "Loading cached split indices for dataset at /home/pili/.cache/huggingface/datasets/imdb/plain_text/1.0.0/d613c88cf8fa3bab83b4ded3713f1f74830d1100e171db75bbddb80b3345c9c0/cache-5f37fd0866e4f89f.arrow and /home/pili/.cache/huggingface/datasets/imdb/plain_text/1.0.0/d613c88cf8fa3bab83b4ded3713f1f74830d1100e171db75bbddb80b3345c9c0/cache-dd5732a0e6ac784c.arrow\n"
      ]
     },
@@ -122,7 +124,7 @@
        "((20000, 2), (5000, 2), (25000, 2))"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +158,10 @@
      "output_type": "stream",
      "text": [
       "Loading cached processed dataset at /home/pili/.cache/huggingface/datasets/imdb/plain_text/1.0.0/d613c88cf8fa3bab83b4ded3713f1f74830d1100e171db75bbddb80b3345c9c0/cache-74e187f956cd9276.arrow\n",
-      "Loading cached processed dataset at /home/pili/.cache/huggingface/datasets/imdb/plain_text/1.0.0/d613c88cf8fa3bab83b4ded3713f1f74830d1100e171db75bbddb80b3345c9c0/cache-bf12997ecf0c40f9.arrow\n"
+      "Loading cached processed dataset at /home/pili/.cache/huggingface/datasets/imdb/plain_text/1.0.0/d613c88cf8fa3bab83b4ded3713f1f74830d1100e171db75bbddb80b3345c9c0/cache-bf12997ecf0c40f9.arrow\n",
+      "2023-05-30 16:23:27.353781: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2023-05-30 16:23:28.190242: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
      ]
     }
    ],
@@ -194,21 +199,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Some weights of the model checkpoint at distilbert-base-uncased were not used when initializing DistilBertForSequenceClassification: ['vocab_transform.bias', 'vocab_transform.weight', 'vocab_layer_norm.bias', 'vocab_projector.weight', 'vocab_projector.bias', 'vocab_layer_norm.weight']\n",
-      "- This IS expected if you are initializing DistilBertForSequenceClassification from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
-      "- This IS NOT expected if you are initializing DistilBertForSequenceClassification from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
-      "Some weights of DistilBertForSequenceClassification were not initialized from the model checkpoint at distilbert-base-uncased and are newly initialized: ['pre_classifier.weight', 'pre_classifier.bias', 'classifier.weight', 'classifier.bias']\n",
-      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# training\n",
     "from transformers import TrainingArguments\n",
@@ -239,9 +232,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of the model checkpoint at distilbert-base-uncased were not used when initializing DistilBertForSequenceClassification: ['vocab_projector.weight', 'vocab_layer_norm.weight', 'vocab_projector.bias', 'vocab_layer_norm.bias', 'vocab_transform.weight', 'vocab_transform.bias']\n",
+      "- This IS expected if you are initializing DistilBertForSequenceClassification from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
+      "- This IS NOT expected if you are initializing DistilBertForSequenceClassification from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
+      "Some weights of DistilBertForSequenceClassification were not initialized from the model checkpoint at distilbert-base-uncased and are newly initialized: ['classifier.bias', 'pre_classifier.weight', 'pre_classifier.bias', 'classifier.weight']\n",
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
+     ]
+    }
+   ],
    "source": [
     "from transformers import AutoModelForSequenceClassification\n",
     "model = AutoModelForSequenceClassification.from_pretrained(checkpoint, num_labels=2)"
@@ -257,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -701,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -767,7 +772,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "here we have an accuracy of 0.92404% on the test set wich was expected since we had a 0.9162 score on the evaluation set during training"
+    "here we have an accuracy of 0.92404 on the test set wich was expected since we had a 0.9162 score on the evaluation set during training"
    ]
   },
   {
@@ -780,17 +785,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "I love sci-fi and am willing to put up with a lot. Sci-fi movies/TV are usually underfunded, under-appreciated and misunderstood. I tried to like this, I really did, but it is to good TV sci-fi as Babylon 5 is to Star Trek (the original). Silly prosthetics, cheap cardboard sets, stilted dialogues, CG that doesn't match the background, and painfully one-dimensional characters cannot be overcome with a 'sci-fi' setting. (I'm sure there are those of you out there who think Babylon 5 is good sci-fi TV. It's not. It's clichéd and uninspiring.) While US viewers might like emotion and character development, sci-fi is a genre that does not take itself seriously (cf. Star Trek). It may treat important issues, yet not as a serious philosophy. It's really difficult to care about the characters here as they are not simply foolish, just missing a spark of life. Their actions and reactions are wooden and predictable, often painful to watch. The makers of Earth KNOW it's rubbish as they have to always say \"Gene Roddenberry's Earth...\" otherwise people would not continue watching. Roddenberry's ashes must be turning in their orbit as this dull, cheap, poorly edited (watching it without advert breaks really brings this home) trudging Trabant of a show lumbers into space. Spoiler. So, kill off a main character. And then bring him back as another actor. Jeeez! Dallas all over again."
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "First off let me say, If you haven't enjoyed a Van Damme movie since bloodsport, you probably will not like this movie. Most of these movies may not have the best plots or best actors but I enjoy these kinds of movies for what they are. This movie is much better than any of the movies the other action guys (Segal and Dolph) have thought about putting out the past few years. Van Damme is good in the movie, the movie is only worth watching to Van Damme fans. It is not as good as Wake of Death (which i highly recommend to anyone of likes Van Damme) or In hell but, in my opinion it's worth watching. It has the same type of feel to it as Nowhere to Run. Good fun stuff!\n",
       "classifier prediction :  1\n",
-      "dataset label :  0\n",
-      "Isaac Florentine has made some of the best western Martial Arts action movies ever produced. In particular US Seals 2, Cold Harvest, Special Forces and Undisputed 2 are all action classics. You can tell Isaac has a real passion for the genre and his films are always eventful, creative and sharp affairs, with some of the best fight sequences an action fan could hope for. In particular he has found a muse with Scott Adkins, as talented an actor and action performer as you could hope for. This is borne out with Special Forces and Undisputed 2, but unfortunately The Shepherd just doesn't live up to their abilities.<br /><br />There is no doubt that JCVD looks better here fight-wise than he has done in years, especially in the fight he has (for pretty much no reason) in a prison cell, and in the final showdown with Scott, but look in his eyes. JCVD seems to be dead inside. There's nothing in his eyes at all. It's like he just doesn't care about anything throughout the whole film. And this is the leading man.<br /><br />There are other dodgy aspects to the film, script-wise and visually, but the main problem is that you are utterly unable to empathise with the hero of the film. A genuine shame as I know we all wanted this film to be as special as it genuinely could have been. There are some good bits, mostly the action scenes themselves. This film had a terrific director and action choreographer, and an awesome opponent for JCVD to face down. This could have been the one to bring the veteran action star back up to scratch in the balls-out action movie stakes.<br /><br />Sincerely a shame that this didn't happen.\n",
+      "dataset label :  0\n"
+     ]
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "Worth the entertainment value of a rental, especially if you like action movies. This one features the usual car chases, fights with the great Van Damme kick style, shooting battles with the 40 shell load shotgun, and even terrorist style bombs. All of this is entertaining and competently handled but there is nothing that really blows you away if you've seen your share before.<br /><br />The plot is made interesting by the inclusion of a rabbit, which is clever but hardly profound. Many of the characters are heavily stereotyped -- the angry veterans, the terrified illegal aliens, the crooked cops, the indifferent feds, the bitchy tough lady station head, the crooked politician, the fat federale who looks like he was typecast as the Mexican in a Hollywood movie from the 1940s. All passably acted but again nothing special.<br /><br />I thought the main villains were pretty well done and fairly well acted. By the end of the movie you certainly knew who the good guys were and weren't. There was an emotional lift as the really bad ones got their just deserts. Very simplistic, but then you weren't expecting Hamlet, right? The only thing I found really annoying was the constant cuts to VDs daughter during the last fight scene.<br /><br />Not bad. Not good. Passable 4."
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "classifier prediction :  1\n",
       "dataset label :  0\n"
      ]
@@ -801,7 +834,7 @@
     "nb = 2\n",
     "for i in range(25000):\n",
     "    if int(classifier(dataset[\"test\"][i][\"text\"])[0][\"label\"][-1]) != int(dataset[\"test\"][i][\"label\"]):\n",
-    "        print(dataset[\"test\"][i][\"text\"])\n",
+    "        display(Markdown(dataset[\"test\"][i][\"text\"]))\n",
     "        print(\"classifier prediction : \", classifier(dataset[\"test\"][i][\"text\"])[0][\"label\"][-1])\n",
     "        print(\"dataset label : \", dataset[\"test\"][i][\"label\"])\n",
     "        nb -= 1\n",
@@ -814,7 +847,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# TODO ANALYSIS"
+    "In the first example, the reviewer expresses mixed sentiments about the movie. While they mention enjoying these types of movies and praise Van Damme's performance, they also indicate that the movie is not as good as other Van Damme films and highlight its shortcomings. The classifier likely focused on the positive mentions of Van Damme and categorized it as a positive review, failing to consider the overall mixed sentiment expressed.\n",
+    "\n",
+    "In the second example, the reviewer initially praises the director and highlights their past successful movies. However, they express disappointment with \"The Shepherd,\" particularly with Jean-Claude Van Damme's performance, mentioning a lack of emotion and difficulty in empathizing with the hero. They also criticize the script and visual aspects. Despite mentioning some positive aspects like the action scenes and director's talent, the overall sentiment leans towards negativity. The classifier may have been influenced by the initial positive comments about the director and action sequences and failed to capture the negative sentiment towards the movie and Van Damme's performance.  \n",
+    "It is not helped by the final note given by the reviewer : 4 and passable, wich is difficult to either classify as positive or negative\n",
+    "\n"
    ]
   },
   {
@@ -830,7 +867,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# TODO ANSWER"
+    "Advantages of DistilBERT over Naive Bayes:\n",
+    "\n",
+    " - DistilBERT captures contextual information effectively, considering the surrounding words and their relationships.\n",
+    " - It handles long-range dependencies in the text, capturing relationships between words that are far apart.\n",
+    " - DistilBERT benefits from pre-training on a large corpus of text, allowing it to learn from extensive data and capture general language patterns.\n",
+    "\n",
+    "Disadvantages of DistilBERT compared to Naive Bayes:\n",
+    "\n",
+    " - DistilBERT is computationally expensive and resource-intensive, requiring significant computational resources and memory.\n",
+    " - It relies on large amounts of labeled data for fine-tuning, making it less suitable for tasks with limited labeled examples.\n",
+    "\n",
+    "Advantages of DistilBERT over RNN/LSTM:\n",
+    "\n",
+    " - DistilBERT captures long-range dependencies more effectively than RNN or LSTM models.\n",
+    " - It can process inputs in parallel, making it faster for batch processing and training.\n",
+    "\n",
+    "Advantages of RNN/LSTM over DistilBERT:\n",
+    "\n",
+    " - RNN and LSTM models are designed for sequential data processing, making them suitable for tasks where the order of words or sequences is crucial.\n",
+    " - They are generally less resource-intensive compared to transformer-based models like DistilBERT."
    ]
   }
  ],
