TP2 done needs reading

--- a/NLP2/Lab02/TP2.ipynb
+++ b/NLP2/Lab02/TP2.ipynb
@@ -136,10 +136,10 @@
           "text": [
             "/home/coartix/.local/lib/python3.10/site-packages/torch/cuda/__init__.py:546: UserWarning: Can't initialize NVML\n",
             "  warnings.warn(\"Can't initialize NVML\")\n",
-            "2023-05-29 17:44:24.644628: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+            "2023-05-30 16:15:57.500707: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
             "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-            "2023-05-29 17:44:25.307346: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n",
-            "2023-05-29 17:44:29.645218: E tensorflow/compiler/xla/stream_executor/cuda/cuda_driver.cc:266] failed call to cuInit: CUDA_ERROR_NO_DEVICE: no CUDA-capable device is detected\n"
+            "2023-05-30 16:15:58.408298: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n",
+            "2023-05-30 16:16:03.177485: E tensorflow/compiler/xla/stream_executor/cuda/cuda_driver.cc:266] failed call to cuInit: CUDA_ERROR_NO_DEVICE: no CUDA-capable device is detected\n"
           ]
         }
       ],
@@ -1138,15 +1138,23 @@
       ]
     },
     {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Let's use the `corpus_score` function to get a score on our three different methods. For that we will build a dictionary of our translations and references (targets):"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 26,
       "metadata": {},
       "outputs": [
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "100%|██████████| 1000/1000 [06:05<00:00,  2.74it/s]\n"
+            "100%|██████████| 1000/1000 [04:01<00:00,  4.14it/s]\n"
           ]
         }
       ],
@@ -1165,11 +1173,11 @@
         "    candidates_topp = []\n",
         "\n",
         "    for (src, tgt) in tqdm(data_iter, total=1000):\n",
-        "        candidates_greedy.append(greedy_translate(model, src).split())\n",
-        "        candidates_topk.append(topk_translate(model, src, k=5).split())\n",
-        "        candidates_topp.append(topp_translate(model, src, p=0.75).split())\n",
+        "        candidates_greedy.append(greedy_translate(model, src))\n",
+        "        candidates_topk.append(topk_translate(model, src, k=5))\n",
+        "        candidates_topp.append(topp_translate(model, src, p=0.75))\n",
         "\n",
-        "        references.append([tgt.split()])\n",
+        "        references.append([tgt])\n",
         "    \n",
         "    dict[\"greedy\"] = candidates_greedy\n",
         "    dict[\"topk\"] = candidates_topk\n",
@@ -1183,7 +1191,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 28,
       "metadata": {},
       "outputs": [
         {
@@ -1191,26 +1199,30 @@
           "output_type": "stream",
           "text": [
             "BLEU score on greedy decoding :\n",
-            "BLEU score = 29.15%\n",
+            "BLEU = 50.81 91.7/54.5/40.0/33.3 (BP = 1.000 ratio = 1.000 hyp_len = 12 ref_len = 12)\n",
             "BLEU score on top-k decoding with k=5 and temperature=1:\n",
-            "BLEU score = 24.30%\n",
+            "BLEU = 42.84 83.3/45.5/40.0/22.2 (BP = 1.000 ratio = 1.000 hyp_len = 12 ref_len = 12)\n",
             "BLEU score on top-p decoding with p=0.75 and temperature=1:\n",
-            "BLEU score = 22.93%\n"
+            "BLEU = 61.05 77.8/62.5/57.1/50.0 (BP = 1.000 ratio = 1.000 hyp_len = 9 ref_len = 9)\n"
           ]
         }
       ],
       "source": [
+        "from sacrebleu.metrics import BLEU\n",
+        "\n",
+        "bleu = BLEU()\n",
+        "\n",
         "# Get BLEU score on greedy decoding\n",
         "print(\"BLEU score on greedy decoding :\")\n",
-        "print(f\"BLEU score = {bleu_score(dict_corpus['greedy'], dict_corpus['refs'])*100:.2f}%\")\n",
+        "print(bleu.corpus_score(dict_corpus[\"greedy\"], dict_corpus[\"refs\"]))\n",
         "\n",
         "# Get BLEU score on top-k decoding\n",
         "print(\"BLEU score on top-k decoding with k=5 and temperature=1:\")\n",
-        "print(f\"BLEU score = {bleu_score(dict_corpus['topk'], dict_corpus['refs'])*100:.2f}%\")\n",
+        "print(bleu.corpus_score(dict_corpus[\"topk\"], dict_corpus[\"refs\"]))\n",
         "\n",
         "# Get BLEU score on top-p decoding\n",
         "print(\"BLEU score on top-p decoding with p=0.75 and temperature=1:\")\n",
-        "print(f\"BLEU score = {bleu_score(dict_corpus['topp'], dict_corpus['refs'])*100:.2f}%\")"
+        "print(bleu.corpus_score(dict_corpus[\"topp\"], dict_corpus[\"refs\"]))"
       ]
     },
     {
@@ -1218,7 +1230,25 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "As stated earlier the greedy decoder has a better translating efficiency than the other functions."
+        "There are multiple values like so:  \n",
+        "BLEU_score 1_gram_precision/2_gram_precision/3_gram_precision/4_gram_precision  \n",
+        "\n",
+        "The first is simply the overrall BLEU score of the model then the following numbers represent precision at 1-gram, 2-gram, 3-gram, and 4-gram levels, respectively.  \n",
+        "\n",
+        "The values inside the parenthesis are:  \n",
+        "- BP: This is the brevity penalty applied to the BLEU score. A value of 1.0 indicates that there is no brevity penalty, meaning that the length of the translations is similar to the length of the test references.  \n",
+        "- ratio: This represents the ratio of the total number of tokens in the translations to the total number of tokens in the references.  \n",
+        "- hyp_len: Total length of the translations in number of tokens.  \n",
+        "- ref_len: Total length of the references in number of tokens."
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Now, to get back on our results the top-p translate has the maximum BLEU score which it's surprising seeing the results above when comparing the three methods on some sentences.  \n",
+        "Nevertheless, with the precision on all four n-grams we see that the top-p translate is more homogeneous than the others that have a significant differences between the precision on the 1-gram and 4-gram. It can explain the overral score being greater on the top-p translate."
       ]
     }
   ],
