--- a/NLP2/Lab03/TP3.ipynb
+++ b/NLP2/Lab03/TP3.ipynb
@@ -17,6 +17,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's import the development version of the HuggingFace Transformer"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -257,7 +265,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "custom metrics using accuracy"
+    "Implementing custom metrics using accuracy :"
    ]
   },
   {
@@ -280,7 +288,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "trainer parameters"
+    "Getting trainer parameters then training begins :"
    ]
   },
   {
@@ -691,7 +699,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Saving and loading the model"
+    "Saving and loading the model to not retrain in case of restart :"
    ]
   },
   {
@@ -729,7 +737,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Evaluation of the modle on the test set"
+    "### Evaluation of the model on the test set"
    ]
   },
   {
@@ -772,7 +780,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "here we have an accuracy of 0.92404 on the test set wich was expected since we had a 0.9162 score on the evaluation set during training"
+    "We get an accuracy of 0.92404 on the test set wich was expected since we had a 0.9162 score on the evaluation set during training."
    ]
   },
   {
@@ -830,7 +838,6 @@
     }
    ],
    "source": [
-    "# analysis on two wrongly classified examples on the test set\n",
     "nb = 2\n",
     "for i in range(25000):\n",
     "    if int(classifier(dataset[\"test\"][i][\"text\"])[0][\"label\"][-1]) != int(dataset[\"test\"][i][\"label\"]):\n",
