--- a/NLP2/Lab04/TP4.ipynb
+++ b/NLP2/Lab04/TP4.ipynb
@@ -365,14 +365,67 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's start with a data analysis."
+    "Let's start with a data analysis.  \n",
+    "### 1. (1 point) Describe the dataset. Look at the splits, proportion of classes, and see what you can figure out by just looking at the text."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training split: 9000 \n",
+      "0    5217\n",
+      "1    3783\n",
+      "dtype: int64 \n",
+      "Validation split: 1000 \n",
+      "0    573\n",
+      "1    427\n",
+      "dtype: int64 \n",
+      "Test split: 2970 \n",
+      "0    1718\n",
+      "1    1252\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Get proportion of splits and classes\n",
+    "print(\"Training split:\", len(train_hate), \"\\n\" + str(pd.Series(train_hate[\"label\"]).value_counts()),\n",
+    "      \"\\nValidation split:\", len(valid_hate), \"\\n\" + str(pd.Series(valid_hate[\"label\"]).value_counts()),\n",
+    "        \"\\nTest split:\", len(test_hate), \"\\n\" + str(pd.Series(test_hate[\"label\"]).value_counts()))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "From the proportion of classes we can see that there are more non-hateful tweets than hateful ones. Roughly 58% of the data on each split is non-hateful."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5784511784511784"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": []
   }
  ],
